MyFirstIDEProject/src/objects/Job_Position__c.object
<CustomObject>
    <description>Describes the job positions available in the recruiting app</description>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Apex is required skill set for this job position</description>
        <inlineHelpText>Check if Apex is required skill set for this job position</inlineHelpText>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if C# is needed skill for this job position</description>
        <inlineHelpText>Check if C# is needed skill for this job position</inlineHelpText>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Describes date on which position is marked as closed</description>
        <inlineHelpText>Describes date on which position is marked as closed</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>Calculate number of days the job position is open</description>
        <formula>IF( ISBLANK( Close_Date__c ) ,  TODAY() -  Open_Date__c ,  Close_Date__c  -  Open_Date__c )</formula>
        <inlineHelpText>Calculate number of days the job position is open</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Requirement__c</fullName>
        <description>Educational qualification needed from any candiate applying for this job position</description>
        <inlineHelpText>Educational qualification needed from any candiate applying for this job position</inlineHelpText>
        <label>Educational Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Encrypted_Salary__c</fullName>
        <label>Encrypted Salary</label>
        <length>12</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>Defines the functional domain of the job position</description>
        <inlineHelpText>Defines the functional domain of the job position</inlineHelpText>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <defaultValue>TODAY()  + 90</defaultValue>
        <description>Describes the date by which position should be filled</description>
        <inlineHelpText>Describes the date by which position should be filled</inlineHelpText>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the relationship field which points to responsible hiring manager for the selected position record</description>
        <inlineHelpText>Stores the relationship field which points to responsible hiring manager for the selected position record</inlineHelpText>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JPExtName__c</fullName>
        <description>Job Position External name</description>
        <externalId>true</externalId>
        <inlineHelpText>Job Position External name</inlineHelpText>
        <label>JPExtName</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if JavaScript is mandatory skill set for given job position</description>
        <inlineHelpText>Check if JavaScript is mandatory skill set for given job position</inlineHelpText>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Java is required skillset for the job position</description>
        <inlineHelpText>Check if the Java is required skillset for the job position</inlineHelpText>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>High level description about jobs and duties.</description>
        <inlineHelpText>High level description about jobs and duties.</inlineHelpText>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <description>Describes the job level of the job position</description>
        <inlineHelpText>Describes the job level of the job position</inlineHelpText>
        <label>Job Level</label>
        <picklist>
            <controllingField>Functional_Area__c</controllingField>
            <picklistValues>
                <fullName>FN-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The location when the job position is available.</description>
        <inlineHelpText>The location when the job position is available.</inlineHelpText>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco, CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Austin, TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boulder, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London, England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai, India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney, Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tokyo, Japan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <description>Maximum payment allowed to candidates being hired for this position</description>
        <inlineHelpText>Maximum payment allowed to candidates being hired for this position</inlineHelpText>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <description>Minimum payment which should be made for any candidate selected for this position</description>
        <inlineHelpText>Minimum payment which should be made for any candidate selected for this position</inlineHelpText>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multiple_skill_set__c</fullName>
        <label>Multiple skill set</label>
        <picklist>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behaviorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managerial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Describes the date when position is opened</description>
        <inlineHelpText>Describes the date when position is opened</inlineHelpText>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <description>Responsibilities for a job position</description>
        <inlineHelpText>Responsibilities for a job position</inlineHelpText>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <description>skills required from a candidate applying for this job position</description>
        <inlineHelpText>skills required from a candidate applying for this job position</inlineHelpText>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the job position</description>
        <inlineHelpText>Status of the job position</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Position</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open-Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if travel will be needed for job position</description>
        <inlineHelpText>Describes if travel will be needed for job position</inlineHelpText>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Displays the type of the job if it is fulltime/part time or internship etc.</description>
        <inlineHelpText>Displays the type of the job if it is fulltime/part time or internship etc.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Unclaimed_Positions_Queue_Job_Position</fullName>
        <filterScope>Queue</filterScope>
        <label>Unclaimed Positions Queue</label>
        <queue>Unclaimed_Positions_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Job Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Positions</pluralLabel>
    <recordTypes>
        <fullName>IT_Position</fullName>
        <active>true</active>
        <description>Record type for all IT job positions</description>
        <label>IT Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Position</fullName>
        <active>true</active>
        <description>Enter record type for all non-IT job positions</description>
        <label>Standard Position</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>true</active>
        <description>Makes sure that the status is not Closed if the closed date is blank</description>
        <errorConditionFormula>AND(  ISBLANK(Close_Date__c ),  
     OR( ISPICKVAL( Status__c , &quot;Closed-Filled&quot;),  
         ISPICKVAL( Status__c , &quot;Closed-Approved&quot;),
         ISPICKVAL( Status__c , &quot;Closed-Cancelled&quot;)  
       )
     )</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Closed Date must be specified if status is closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MinPay_Rule</fullName>
        <active>true</active>
        <description>Min Pay should never be grater than Max Pay</description>
        <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
        <errorMessage>Minimum pay cannot exceed maximum pay value</errorMessage>
    </validationRules>
</CustomObject>